# homesoft

./: CMakeLists.txt  README.md
Gui/: CMakeLists.txt  addbuyorderdialog.cpp  addbuyorderdialog.h  addbuyorderdialog.ui  additemdialog.cpp  additemdialog.h  additemdialog.ui  additemstyletransaction.cpp  additemstyletransaction.h  addordertransaction.h  adduserdialog.cpp  adduserdialog.h  adduserdialog.ui  addusertransaction.cpp  addusertransaction.h  counterbymonthanduserdialog.h  countermonthdialog.cpp  countermonthdialog.h  countermonthtransaction.cpp  countertransaction.h  loadtransaction.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menudatabase.cpp  menudatabase.h  order.cpp  querybydatedialog.cpp  querybydatedialog.h  querybydatedialog.ui  querybydatetransaction.cpp  querybydatetransaction.h  querybynameanddatedialog.cpp  querybynameanddatedialog.h  querybynameanddatetransaction.cpp  querybynameanddatetransaction.h  querytransaction.cpp  savetransaction.cpp
homesoft/: CMakeLists.txt  addbuyorderdialog.cpp  additemdialog.h  addordertransaction.cpp  adduserdialog.h  counterbymonthanduserdialog.cpp  counterbymonthandusertransaction.cpp  counterbymonthandusertransaction.h  countermonthdialog.cpp  countermonthtransaction.cpp  countermonthtransaction.h  countertransaction.cpp  dockwidgets.qrc  loadtransaction.h  mainwindow.cpp  order.h  querybydatedialog.cpp  querybydatetransaction.cpp  querybynameanddatedialog.cpp  querybynameanddatetransaction.cpp  querytransaction.h  savetransaction.h  transaction.cpp  transaction.h
msvc/homesoft/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  homesoft.vcxproj  homesoft.vcxproj.filters  moc_addbuyorderdialog.cxx  moc_addbuyorderdialog.cxx_parameters  moc_additemdialog.cxx  moc_additemdialog.cxx_parameters  moc_adduserdialog.cxx  moc_adduserdialog.cxx_parameters  moc_counterbymonthanduserdialog.cxx  moc_counterbymonthanduserdialog.cxx_parameters  moc_countermonthdialog.cxx  moc_countermonthdialog.cxx_parameters  moc_mainwindow.cxx  moc_mainwindow.cxx_parameters  moc_querybydatedialog.cxx  moc_querybydatedialog.cxx_parameters  moc_querybynameanddatedialog.cxx  moc_querybynameanddatedialog.cxx_parameters  qrc_dockwidgets.cxx
msvc/homesoft/homesoft.dir/Debug/: CL.write.1.tlog  cl.command.1.tlog  homesoft.lastbuildstate  homesoft_manifest.rc  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
msvc/homesoft/homesoft.dir/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  homesoft.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
